Update CSS styles and fix button alignment in index.html and desa.js

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1268,7 +1268,8 @@ input[name="plan"]:checked ~ .menuKetigaAds {
 }
 
 .komponen_dua_grid_form_layer {
-  @apply grid grid-cols-[425px,1fr];
+  /* @apply grid grid-cols-[425px,1fr]; */
+  @apply grid grid-cols-[1fr,200px];
 }
 
 .komponen_satu_grid_form_layer {
